--- a/UserManagmentModule.Api/Web.config
+++ b/UserManagmentModule.Api/Web.config
@@ -37,13 +37,9 @@
 
 
   <connectionStrings>
-
-    <add name="ConnectonOne" connectionString="Server=127.0.0.1;Port=5432;Database=first;User Id=postgres;Password=123456;" providerName="PostgreSQL OLE DB Provider"/>
+    <add name="ConnectonOne" connectionString="Server=127.0.0.1;Port=5432;Database=UserManagementModuleDatabase;User Id=postgres;Password=123456;" providerName="PostgreSQL OLE DB Provider"/>
     <add name="ConnectonTwo" connectionString="Connection string two" providerName="Two"/>
     <add name="ConnectonThree" connectionString="connection string three" providerName="Three"/>
-
-
-
   </connectionStrings>
 
    <DatabaseFactoryConfiguration Name="UserManagmentModule.DatabaseConnection.DBClasses.PostgrSQLDatabase" ConnectionStringName="ConnectonOne" />
