--- a/UserManagmentModule.Api/Web.config
+++ b/UserManagmentModule.Api/Web.config
@@ -37,6 +37,7 @@
       <add name="Access-Control-Allow-Origin" value="*" />
       <add name="Access-Control-Allow-Methods" value="*" />
       <add name="Access-Control-Allow-Headers" value="content-Type" />
+      <add name="Access-Control-Allow-Credentials" value="true" />
     </customHeaders>
   </httpProtocol>
   </system.webServer>
