ready first demo

--- a/UserManagmentModule.Api/Web.config
+++ b/UserManagmentModule.Api/Web.config
@@ -5,15 +5,15 @@
   -->
 <configuration>
   <configSections>
-   
-      <section
-        name="DatabaseFactoryConfiguration"
-        type="UserManagmentModule.DatabaseConnection.Handler.DatabaseFactorySectionHandler,UserManagmentModule.DatabaseConnection"
-        allowLocation="true"
-        allowDefinition="Everywhere"
+
+    <section
+      name="DatabaseFactoryConfiguration"
+      type="UserManagmentModule.DatabaseConnection.Handler.DatabaseFactorySectionHandler,UserManagmentModule.DatabaseConnection"
+      allowLocation="true"
+      allowDefinition="Everywhere"
       />
-    
-  
+
+
   </configSections>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
@@ -32,24 +32,27 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-  <httpProtocol>
-    <customHeaders>
-      <add name="Access-Control-Allow-Origin" value="*" />
-      <add name="Access-Control-Allow-Methods" value="*" />
-      <add name="Access-Control-Allow-Headers" value="content-Type" />
-      <add name="Access-Control-Allow-Credentials" value="true" />
-    </customHeaders>
-  </httpProtocol>
+    <httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Origin" value="*" />
+        <add name="Access-Control-Allow-Methods" value="*" />
+        <add name="Access-Control-Allow-Headers" value="content-Type" />
+        <add name="Access-Control-Allow-Credentials" value="true" />
+      </customHeaders>
+    </httpProtocol>
   </system.webServer>
 
 
 
   <connectionStrings>
-    <add name="ConnectonOne" connectionString="Server=127.0.0.1;Port=5432;Database=UserManagementModuleDatabase;User Id=postgres;Password=123456;" providerName="PostgreSQL OLE DB Provider"/>
+    <!--place your database config data-->
+    <add name="PostgresqlConnection" connectionString="Server=127.0.0.1;Port=5432;Database=UserManagementModuleDatabase;User Id=postgres;Password=123456;" providerName="PostgreSQL OLE DB Provider"/>
+    <!--samples-->
     <add name="ConnectonTwo" connectionString="Connection string two" providerName="Two"/>
     <add name="ConnectonThree" connectionString="connection string three" providerName="Three"/>
   </connectionStrings>
 
-   <DatabaseFactoryConfiguration Name="UserManagmentModule.DatabaseConnection.DBClasses.PostgrSQLDatabase" ConnectionStringName="ConnectonOne" />
+  <!--put database operation class and connection string name-->
+  <DatabaseFactoryConfiguration Name="UserManagmentModule.DatabaseConnection.DBClasses.PostgrSQLDatabase" ConnectionStringName="PostgresqlConnection" />
 
 </configuration>
